--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "moment": "^2.30.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^7.2.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.0",
     "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
