--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
     "@ant-design/icons": "^5.6.1",
     "@cloudinary/react": "^1.14.1",
     "@cloudinary/url-gen": "^1.21.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@google/generative-ai": "^0.23.0",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
+    "@mui/x-date-pickers": "^8.4.0",
     "@tailwindcss/vite": "^4.0.9",
     "antd": "^5.24.2",
     "cloudinary": "^2.6.0",
+    "date-fns": "^4.1.0",
     "firebase": "^11.4.0",
     "framer-motion": "^12.4.10",
     "lodash": "^4.17.21",
