--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react-dom": "^18.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
+    "recharts": "^2.15.3",
+    "styled-components": "^6.1.18",
     "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
