--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.0.9",
     "antd": "^5.24.2",
+    "axios": "^1.9.0",
     "cloudinary": "^2.6.0",
     "date-fns": "^4.1.0",
     "firebase": "^11.4.0",
