--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@mui/x-date-pickers": "^8.4.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.0.9",
     "antd": "^5.24.2",
+    "axios": "^1.9.0",
     "cloudinary": "^2.6.0",
     "date-fns": "^4.1.0",
     "firebase": "^11.4.0",
@@ -30,6 +32,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
     "recharts": "^2.15.3",
     "styled-components": "^6.1.18",
